# shelf

./: .gitignore  Dockerfile  Pipfile  README.md  dl_drm_files.py  do_build.sh  do_test.sh  generate_personal_podcast.rb  get_library_catalog.py  get_library_metadata.py  getlib.py  pyproject.toml  register.py  restock_shelf.sh  strip_drm.py
.github/workflows/: cloudsmith.yaml  main.yml
audiobooks/: .gitignore
old/: test.py
script/: .gitignore  README.md  getlib.py
src/audible-cli/plugins/: cmd_decrypt.py  cmd_rss.py
src/feedgen/ext/: pc20.py  pc20_entry.py  podcasting20.py  podcasting20_entry.py
src/shelf/: __init__.py  shelf_feed_generator.py  shelf_feedgen.py
tests/: conftest.py  test_ext_p20_entry.py  test_ext_pc20.py  test_ext_pc20_entry.py  test_pc20_entry_ext.py  test_pc20_ext.py  test_podcasting20_extension.py  test_shelf.py
