[tool.poetry]
name = "shelf"
version = "0.1.0"
description = "Shelf!!!"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
audible = "^0.9.1"
audible-cli = "^0.3.1"
isbntools = "^4.3.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
