[tool.poetry]
name = "shelf"
version = "0.1.0"
description = "Shelf!!!"
authors = []
readme = "README.md"
packages = [
    { include = "shelf", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
audible = "^0.9.1"
audible-cli = "^0.3.1"
isbntools = "^4.3.29"
podgen = "^1.1.0"
rfc3986 = "^2.0.0"
feedgen = "^1.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]